--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="subheading mb-5">(806) 224-9453 ·
             <a href="mailto:name@email.com">ayush.p.dhumal@ttu.edu</a>
           </div>
-          <p class="lead mb-5">I am an undergraduate student at Texas Tech University(TTU) studtying Computer Science and Mathematics, graduating in May 2021. At TTU, I am a member of the Society of National Collegiate Scholars, Association of Computing Machinery (ACM), and RISA.
+          <p class="lead mb-5">I am an undergraduate student at Texas Tech University(TTU) studying Computer Science and Mathematics, graduating in May 2021. At TTU, I am a member of the Society of National Collegiate Scholars, Association of Computing Machinery (ACM), and RISA.
           </p>           
           <p class="lead mb-5">The condensed version of this site can be found on my <a href = "https://www.linkedin.com/in/ayushdhumal/">LinkedIn profile </a>. All of my achievements on Hackerrank can be found on my <a href = "https://www.hackerrank.com/ayushdhumal">Hackerank profile</a>.
             </p>
@@ -239,7 +239,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being coding, I enjoy most of my time being on recreational center and outdoors. During the warmer months, I enjoy hiking, free climbing, and swimming.</p>
+          <p>Apart from coding, I enjoy most of my time being on recreational center and outdoors. During the warmer months, I enjoy hiking, free climbing, and swimming.</p>
           <p class="mb-0">When forced indoors, I love watching sci-fi and action movies and television shows. I enjoy the peace of mind through meditation and yoga.</p>
         </div>
       </section>
@@ -290,3 +290,4 @@
   </body>
 
 </html>
+  <!-- This template was created by start bootstrap and the link for this can be found here: https://startbootstrap.com/themes/resume/ -->
