--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Texas Tech University</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Major: Computer Science Minor and Mathematics</div>
+              <div>Major: Computer Science and Mathematics</div>
               <p>GPA: 3.7</p>
             </div>
             <div class="resume-date text-md-right">
