--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+            <a class="nav-link js-scroll-trigger" href="#awards">Awards / Certifications</a>
           </li>
         </ul>
       </div>
@@ -75,12 +75,12 @@
           <h1 class="mb-0">Ayush
             <span class="text-primary">Dhumal</span>
           </h1>
-          <div class="subheading mb-5">(806) 224-9453 ·
-            <a href="mailto:name@email.com">ayush.p.dhumal@ttu.edu</a>
+          <div class="subheading mb-5"><p>Computer Science and Mathematics student at Texas Tech University·</p>
+            <a href="mailto:ayushdhumal@gmail.com">ayushdhumal@gmail.com</a>
           </div>
-          <p class="lead mb-5">I am an undergraduate student at Texas Tech University(TTU) studying Computer Science and Mathematics, graduating in May 2021. I have a strong interest in Software Development and Technical Project Management.
+          <p class="lead mb-5">This website is dedicated to the work of me, Ayush Dhumal - a senior at Texas Tech University(TTU) studying Computer Science and Mathematics. I am graduating TTU in December 2021. I have interned with Dell Technologies and BMW Group in the past. 
           </p>           
-          <p class="lead mb-5">The condensed version of this site can be found on my <a href = "https://www.linkedin.com/in/ayushdhumal/">LinkedIn profile </a>. All of my achievements on Hackerrank can be found on my <a href = "https://www.hackerrank.com/ayushdhumal">Hackerank profile</a>.
+          <p class="lead mb-5"> Here you will find a summation of my experience, skills, interests and professional certifications. If you have any questions, please feel free to email me at ayushdhumal@gmail.com</a>.
             </p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/ayushdhumal/">
@@ -102,16 +102,32 @@
           
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">IT Business Intelligence Intern</h3>
-              <div class="subheading mb-3">BMW Group</div>
+              <h3 class="mb-0">Software Engineering Intern (Remote)</h3>
+              <div class="subheading mb-3">Dell Technologies</div>
               <ul style="list-style-type:disc;">
-                <li>Develop an application to extract data out of a web server and produce statistical reports</li>
-                <li>Interpret problems using current procedures and framework using data analysis and optimization tools</li>
+                <li>Developed a Blockchain-based solution to improve the Software Supply Chain process of Dell</li>
+                <li>Built a web application using Azure Blockchain Workbench, Solidity, JSON to host Ethereum based smart contracts</li>
+                <li>Primarily used C#, Postman and Azure App Service to interact with the web application and upload the transactions</li>
               </ul> 
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">January 2020 - Present</span>
+              <span class="text-primary">June 2020 - July 2020</span>
             </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">IT Business Intelligence Intern</h3>
+              <div class="subheading mb-3">BMW Group</div>
+              <ul style="list-style-type:disc;">
+                <li>Developed an application to extract data out of a web server and produce statistical reports</li>
+                <li>Interpreted problems using current procedures and frameworks and map it using PowerBI</li>
+                <li>Used Python to scrape the data out of a server and PostgresSql to store it</li>
+              </ul> 
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">January 2020 - May 2020</span>
+            </div> 
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
@@ -127,17 +143,6 @@
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2018 - December 2019</span>
-            </div>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Undergraduate Research Assistant</h3>
-              <div class="subheading mb-3">Texas Tech University</div>
-              <p></p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">May 2019 - Present</span>
             </div>
           </div>
 
@@ -157,7 +162,7 @@
               <p>GPA: 3.7</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">August 2017 - May 2021</span>
+              <span class="text-primary">August 2017 - December 2021</span>
             </div>
           </div>
 
@@ -214,16 +219,19 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Algorithms and Data Structures</li>
+              Cloud technology (Azure)</li>
             <li>
               <i class="fa-li fa fa-check"></i>
-              C, C++ and C#</li>
+              C#/Java</li>
                         <li>
               <i class="fa-li fa fa-check"></i>
-              Data Analysis</li>
+              BLockchain development</li>
               <li>
                 <i class="fa-li fa fa-check"></i>
-                Backend Development</li>
+                Web Development </li>
+                <li>
+            <i class="fa-li fa fa-check"></i>
+                Application Development </li>
           </ul>
         </div>
       </section>
@@ -232,9 +240,12 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
-          <h2 class="mb-5">Interests</h2>
-          <p>Apart from coding, I enjoy most of my time being outdoors. During the warmer months, I enjoy hiking, free climbing, and swimming.</p>
-          <p class="mb-0">When forced indoors, I love watching sci-fi and action movies and television shows. I enjoy the peace of mind through meditation and yoga.</p>
+          <h2 class="mb-5">In My Free Time</h2>
+          <p>When I am not doing any of the things above and find myself in my (increasingly diminishing)free time, I enjoy most of my time being outdoors. I love going on hikes, camping trips. I feel passionately about taking care of myself physically and like to make time for a workout several times a week. While performing high-intensity workouts, I love to add a couple of free-style calisthenics excercises. </p>
+
+          <p class="mb-0">When forced indoors, I enjoy analyzing the current market trends and learning about new innovations and technology. Midway through the college, 
+            I caught my interest in share market and spend time analyzing how our day-to-day lives can influence the financial market and it's probably the
+             dominant topic of my idle thoughts.   </p>
         </div>
       </section>
 
@@ -258,10 +269,10 @@
               Python Essential Training</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              President's Honors list</li>
+              Texas Tech - President's Honors list</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Presidential scholar</li>
+              Texas Tech - Presidential scholar</li>
               <li>
                 <i class="fa-li fa fa-trophy text-warning"></i>
                 Google Cloud Platform Essentials</li>
