Update experience section

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
               <h3 class="mb-0">IT Business Intelligence Intern</h3>
               <div class="subheading mb-3">BMW Group</div>
               <ul style="list-style-type:disc;">
-                <li>Developed an application to extract data out of a web server and produce statistical reports</li>
-                <li>Interpreted problems using current procedures and frameworks and map it using PowerBI</li>
-                <li>Used Python to scrape the data out of a server and PostgresSql to store it</li>
+                <li>Developed PowerBI dashboards using Python and React to produce statistical reports</li>
+                <li>Helped automatize the extraction of data using Python and store it to a Postgres SQL database</li>
+                <li>Collaborated with other IT groups to improve the effeciency of the offshore and internal employees</li>
               </ul> 
             </div>
             <div class="resume-date text-md-right">
